--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Add some files
+*.DS_Store
+* config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -26,6 +30,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
